:construction: agregado cosas para historial, al parecer es necesario crear un historial antes del User por eso el error